--- a/grubby-giant/src/components/astro-blocks/AboutHero.astro
+++ b/grubby-giant/src/components/astro-blocks/AboutHero.astro
@@ -28,10 +28,10 @@ const imageSmall = normalizeCmsImage(data?.imageSmall);
 
       <div class="markdown-body !bg-white">
         <ReactMarkdown
-          class="text-lg lg:text-[1.25rem] text-[#555555] max-w-[518px]"
+          className="text-lg lg:text-[1.25rem] text-[#555555] max-w-[518px]"
           children={data?.description as string}
           remarkPlugins={[remarkGfm]}
-          linkTarget="_blank"
+       
         />
       </div>
     </div>
